front: fix horizontal scroll

--- a/metafunds_front/src/components/landing_section/landing_section.scss
+++ b/metafunds_front/src/components/landing_section/landing_section.scss
@@ -61,7 +61,7 @@ strong {
         text-transform: uppercase;
         font-style: italic;
         color: white;
-        margin: 10px;
+        // margin: 10px;
 
         @include is-tablet() {
             font-size: 21px;
